--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   run-precommit:
-    runs-on: [ecs-hosted]
+    runs-on: ubuntu-latest
     container:
       image: python:3.9
     steps:
