--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,16 +6,20 @@ jobs:
   run-precommit:
     runs-on: ubuntu-latest
     container:
-      image: python:3.9
+      image: ubuntu:22.04
     steps:
-    - uses: actions/checkout@v4
-    #download pre-commit zipapp 
-    - uses: actions/cache@v4
+    - uses: actions/checkout@v2
+    - name: Install system dependencies
+      run: apt-get update && apt-get install -y libsqlite3-dev
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        path: ~/.cache/pre-commit
-        key: pre-commit-3|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
-    - uses: pre-commit/action@v3.0.1
-      with:
-        extra_args: flake8 --all-files
-    - run: ls -lah
-      shell: bash
+        python-version: '3.9'
+    - name: Install dependencies
+      env:
+        PIP_CACHE_DIR: /github/home/.pip-cache
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - uses: cloudposse/github-action-pre-commit@v2.1.2
