--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install system dependencies
-      run: apt-get update && apt-get install -y libsqlite3-dev
+      run: apt-get update && apt-get install -y libsqlite3-dev git
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
