--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,39 +1,14 @@
 name: pre-commit
 
-on: [push]
+on:
+  pull_request:
+  push:
+    branches: [main]
 
 jobs:
-  run-precommit:
+  pre-commit:
     runs-on: ubuntu-latest
-    container:
-      image: ubuntu:22.04
     steps:
-    - uses: actions/checkout@v2
-    - name: Install system dependencies
-      run: apt-get update && apt-get install -y libsqlite3-dev git
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
-    
-    - name: Create virtual environment
-      run: python -m venv venv 
-
-    - name: Install dependencies
-      env:
-        PIP_CACHE_DIR: /github/home/.pip-cache
-      run: |
-        ./venv/bin/python -m pip install --upgrade pip
-
-    - name: Install pre-commit
-      run: |
-        ./venv/bin/python -m pip install pre-commit 
-        ./venv/bin/pre-commit --version 
-
-    - name: Configure safe directory for Git
-      run: git config --global --add safe.directory $GITHUB_WORKSPACE 
-
-    - name: Run pre-commit
-      run: |
-        cd $GITHUB_WORKSPACE
-        ./venv/bin/pre-commit run --all-files
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v3
+    - uses: pre-commit/action@v3.0.1
