--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:22.04
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v3
